Added spec for preingest job

--- a/config/context.yml
+++ b/config/context.yml
@@ -1,4 +1,5 @@
 # Configures JSON-LD conversion from IuMetadata::Mods/Marc attributes
+# FIXME: fix unit_of_origin configuration here
 #
 ---
 "@context":
