--- a/spec/fixtures/IU/sip.yml
+++ b/spec/fixtures/IU/sip.yml
@@ -77,7 +77,7 @@
       :premis_event_type:
       - mes
       :premis_agent:
-      - store-admin@iu.edu
+      - mailto:store-admin@iu.edu
       :premis_event_date_time:
       - '2016-06-02T12:43:28-04:00'
       :premis_event_detail:
@@ -88,7 +88,7 @@
       :premis_event_type:
       - mes
       :premis_agent:
-      - mailto@mdpi.iu.edu
+      - mailto:mailto@mdpi.iu.edu
       :premis_event_date_time:
       - '2016-06-02T12:43:28-04:00'
       :premis_event_detail:
@@ -99,7 +99,7 @@
       :premis_event_type:
       - cre
       :premis_agent:
-      - mailto@mdpi.iu.edu
+      - mailto:mailto@mdpi.iu.edu
       :premis_event_date_time:
       - '2015-12-03T00:00:00+00:00'
       :premis_event_detail:
@@ -131,7 +131,7 @@
       :premis_event_type:
       - mes
       :premis_agent:
-      - store-admin@iu.edu
+      - mailto:store-admin@iu.edu
       :premis_event_date_time:
       - '2016-06-02T12:43:28-04:00'
       :premis_event_detail:
@@ -152,7 +152,7 @@
       :premis_event_type:
       - mes
       :premis_agent:
-      - store-admin@iu.edu
+      - mailto:store-admin@iu.edu
       :premis_event_date_time:
       - '2016-06-02T12:43:28-04:00'
       :premis_event_detail:
@@ -208,7 +208,7 @@
       :premis_event_type:
       - mes
       :premis_agent:
-      - store-admin@iu.edu
+      - mailto:store-admin@iu.edu
       :premis_event_date_time:
       - '2016-06-02T12:43:28-04:00'
       :premis_event_detail:
@@ -219,7 +219,7 @@
       :premis_event_type:
       - mes
       :premis_agent:
-      - mailto@mdpi.iu.edu
+      - mailto:mailto@mdpi.iu.edu
       :premis_event_date_time:
       - '2016-06-02T12:43:28-04:00'
       :premis_event_detail:
@@ -230,7 +230,7 @@
       :premis_event_type:
       - cre
       :premis_agent:
-      - mailto@mdpi.iu.edu
+      - mailto:mailto@mdpi.iu.edu
       :premis_event_date_time:
       - '2015-12-03T00:00:00+00:00'
       :premis_event_detail:
@@ -248,7 +248,7 @@
       :premis_event_type:
       - mes
       :premis_agent:
-      - store-admin@iu.edu
+      - mailto:store-admin@iu.edu
       :premis_event_date_time:
       - '2016-06-02T12:43:28-04:00'
       :premis_event_detail:
@@ -304,7 +304,7 @@
       :premis_event_type:
       - mes
       :premis_agent:
-      - store-admin@iu.edu
+      - mailto:store-admin@iu.edu
       :premis_event_date_time:
       - '2016-06-02T12:43:28-04:00'
       :premis_event_detail:
@@ -315,7 +315,7 @@
       :premis_event_type:
       - mes
       :premis_agent:
-      - mailto@mdpi.iu.edu
+      - mailto:mailto@mdpi.iu.edu
       :premis_event_date_time:
       - '2016-06-02T12:43:28-04:00'
       :premis_event_detail:
@@ -326,7 +326,7 @@
       :premis_event_type:
       - cre
       :premis_agent:
-      - mailto@mdpi.iu.edu
+      - mailto:mailto@mdpi.iu.edu
       :premis_event_date_time:
       - '2015-12-03T00:00:00+00:00'
       :premis_event_detail:
