--- a/config/context.yml
+++ b/config/context.yml
@@ -7,6 +7,7 @@
   dcterms: http://purl.org/dc/terms/
   iiif: http://iiif.io/api/presentation/2#
   loc: http://id.loc.gov/vocabulary/identifiers/
+  nfo: http://www.semanticdesktop.org/ontologies/2007/03/22/nfo#
   mods: http://www.loc.gov/mods/rdf/v1#
   pulterms: http://library.princeton.edu/terms/
   rdf: http://www.w3.org/1999/02/22-rdf-syntax-ns#
@@ -14,6 +15,7 @@
   skos: http://www.w3.org/2004/02/skos/core#
   ebucore: http://www.ebu.ch/metadata/ontologies/ebucore/ebucore#
   premis: http://id.loc.gov/ontologies/premis#
+  premisrdf: http://www.loc.gov/premis/rdf/v1#
   
   # Work data model properties
   
@@ -54,25 +56,25 @@
   manual_qc_check:
     "@id": skos:changeNote
   encoder_manufacturer:
-    "@id": premis:hasHardwareOtherInformation
+    "@id": premisrdf:hasHardwareOtherInformation
   encoder_model:
-    "@id": premis:hasHardwareOtherInformation
+    "@id": premisrdf:hasHardwareOtherInformation
   encoder_serial_number:
-    "@id": premis:hasHardwareOtherInformation
+    "@id": premisrdf:hasHardwareOtherInformation
   ad_manufacturer:
-    "@id": premis:hasHardwareName
+    "@id": premisrdf:hasHardwareName
   ad_model:
-    "@id": premis:hasHardwareName
+    "@id": premisrdf:hasHardwareName
   ad_serial_number:
-    "@id": premis:hasHardwareName
+    "@id": premisrdf:hasHardwareName
   speed_used:
     "@id": ebucore:playbackSpeed
   tbc_manufacturer:
-    "@id": premis:hasHardwareName
+    "@id": premisrdf:hasHardwareName
   tbc_model:
-    "@id": premis:hasHardwareName
+    "@id": premisrdf:hasHardwareName
   tbc_serial_number:
-    "@id": premis:hasHardwareName
+    "@id": premisrdf:hasHardwareName
   tape_thickness:
     "@id": dcterms:description
   total_parts:
@@ -83,13 +85,13 @@
   date_generated:
     "@id": ebucore:dateCreated
   file_format:
-    "@id": premis:hasFormatName
+    "@id": premisrdf:hasFormatName
   file_format_long_name:
     "@id": ebucore:hasFileFormat
   codec_type:
     "@id": ebucore:hasMedium
   codec_name:
-    "@id": ebucore:hasCode
+    "@id": ebucore:hasCodec
   codec_long_name:
     "@id": ebucore:codecName
   format_duration:
@@ -100,7 +102,7 @@
     "@id": ebucore:filename
   filename:
     "@id": ebucore:filename
-  format_file_size:
+  file_size:
     "@id": ebucore:fileSize
   identifier:
     "@id": ebucore:identifier
