Adds .ruby-version (currently 2.3.1)

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
+# See project .ruby-version file for which ruby version is used.
 language: ruby
-rvm:
-- 2.3.0
 script:
 - bundle exec rake db:migrate
 - bundle exec rake ci
