Removed requirement for Work resource in ingest; removed source layer of work_attributes; merged file_set_attributes into each file_set[:attributes]; removed sources/source_metadata stuff; dropped unused methods; dropped batch_ingest/ folder

--- a/config/context.yml
+++ b/config/context.yml
@@ -103,6 +103,8 @@
     "@id": ebucore:filename
   filename:
     "@id": ebucore:filename
+  format_file_size:
+    "@id": ebucore:fileSize
   file_size:
     "@id": ebucore:fileSize
   identifier:
