--- a/spec/fixtures/IU/sip_with_mezzanine.yml
+++ b/spec/fixtures/IU/sip_with_mezzanine.yml
@@ -1,33 +1,29 @@
 ---
 :resource: Work
 :work_attributes:
-  :pod:
-    digitization_comments:
-    - B-WELLS
-    recording_standard:
-    - NTSC
-    image_format:
-    - '4:3'
-  :mods:
-    title:
-    - Mrs. Warren's profession
-:file_set_attributes:
-  :pod:
-    unit_of_origin:
-    - B-WELLS
-    identifier:
-    - '40000002050831'
-  :mods: {}
-:source_metadata: 
+  digitization_comments:
+  - B-WELLS
+  recording_standard:
+  - NTSC
+  image_format:
+  - '4:3'
+  title:
+  - Mrs. Warren's profession
 :file_sets:
-- :filename: MDPI_40000002050831_01_mezz_ffprobe.xml
+- :filename: MDPI_40000002050831_01_mezz.mov
   :attributes:
+    file_format:
+    - mov,mp4,m4a,3gp,3g2,mj2
     file_format_long_name:
     - QuickTime / MOV
     codec_type:
     - video
     - audio
     - audio
+    codec_name:
+    - mpeg2video
+    - pcm_s24le
+    - pcm_s24le
     codec_long_name:
     - MPEG-2 video
     - PCM signed 24-bit little-endian
@@ -38,6 +34,8 @@
     - '52320865'
     file_name:
     - "/srv/scratch/transcoder_workspace_xcode-03_prod/MDPI_40000002050831.downloading/data/MDPI_40000002050831_01_mezz.mov"
+    format_file_size:
+    - '24559100292'
     format_sample_rate:
     - '48000'
     - '48000'
@@ -45,44 +43,70 @@
     - '720'
     video_height:
     - '512'
+    md5_checksum:
+    - cf58f2187d247b2ea15b0a1e210244c2
   :files:
   - :mime_type: application/xml
-    :path: "/home/aploshay/Documents/iu_dev/hydradam2-app/spec/fixtures/IU/40000002050831_20160606-151010/MDPI_40000002050831_01_mezz_ffprobe.xml"
+    :path: "/home/aploshay/Documents/iu_dev/phydo/spec/fixtures/IU/40000002050831_20160606-151010/MDPI_40000002050831_01_mezz_ffprobe.xml"
     :filename: MDPI_40000002050831_01_mezz_ffprobe.xml
     :file_opts: {}
+    :use: extracted_text
     :md5sum: 68af556f3cb78cc5a10e43590057df36
-  - :mime_type: FIXME
+  - :mime_type: application/octet-stream
     :filename: MDPI_40000002050831_01_mezz.mov
     :file_opts: {}
+    :use: original_file
     :md5sum: cf58f2187d247b2ea15b0a1e210244c2
     :purl: https://purl.dlib.indiana.edu/iudl/hydradam2/MDPI/40000002050831/20160606-150517/MDPI_40000002050831_01_mezz.mov
   :events:
   - :attributes:
       :premis_event_type:
-      - ing
+      - val
       :premis_agent:
-      - mailto:adam.ploshay@gmail.com
+      - mailto:fixme@fixme.fixme
       :premis_event_date_time:
-      - 2017-01-18 19:06:13.614933801 -05:00
+      - '2016-06-06T15:10:12-04:00'
+      :premis_event_detail:
+      - FFprobe multimedia streams analyzer from FFmpeg
+      :premis_event_outcome:
+      - PASS
+  - :attributes:
+      :premis_event_type:
+      - mes
+      :premis_agent:
+      - mailto:store-admin@iu.edu
+      :premis_event_date_time:
+      - '2016-06-06T15:10:10-04:00'
+      :premis_event_detail:
+      - 'Program used: python, hashlib.sha256()'
+      :premis_event_outcome:
+      - cf58f2187d247b2ea15b0a1e210244c2
 - :filename: MDPI_40000002050831_purl.yaml
   :files:
   - :mime_type: application/x-yaml
-    :path: "/home/aploshay/Documents/iu_dev/hydradam2-app/spec/fixtures/IU/40000002050831_20160606-151010/MDPI_40000002050831_purl.yaml"
+    :path: "/home/aploshay/Documents/iu_dev/phydo/spec/fixtures/IU/40000002050831_20160606-151010/MDPI_40000002050831_purl.yaml"
     :filename: MDPI_40000002050831_purl.yaml
     :file_opts: {}
+    :use: original_file
 - :filename: manifest-md5.txt
   :files:
   - :mime_type: text/plain
-    :path: "/home/aploshay/Documents/iu_dev/hydradam2-app/spec/fixtures/IU/40000002050831_20160606-151010/manifest-md5.txt"
+    :path: "/home/aploshay/Documents/iu_dev/phydo/spec/fixtures/IU/40000002050831_20160606-151010/manifest-md5.txt"
     :filename: manifest-md5.txt
     :file_opts: {}
-- :filename: MDPI_40000002050831_01_access_ffprobe.xml
+    :use: original_file
+- :filename: MDPI_40000002050831_01_access.mp4
   :attributes:
+    file_format:
+    - mov,mp4,m4a,3gp,3g2,mj2
     file_format_long_name:
     - QuickTime / MOV
     codec_type:
     - video
     - audio
+    codec_name:
+    - h264
+    - aac
     codec_long_name:
     - H.264 / AVC / MPEG-4 AVC / MPEG-4 part 10
     - AAC (Advanced Audio Coding)
@@ -92,38 +116,86 @@
     - '3058785'
     file_name:
     - "/srv/scratch/transcoder_workspace_xcode-03_prod/MDPI_40000002050831.downloading/data/MDPI_40000002050831_01_access.mp4"
+    format_file_size:
+    - '1435791918'
     format_sample_rate:
     - '48000'
     video_width:
     - '720'
     video_height:
     - '486'
+    md5_checksum:
+    - 67c6503f31ac12c4b3190c8221078d7f
   :files:
   - :mime_type: application/xml
-    :path: "/home/aploshay/Documents/iu_dev/hydradam2-app/spec/fixtures/IU/40000002050831_20160606-151010/MDPI_40000002050831_01_access_ffprobe.xml"
+    :path: "/home/aploshay/Documents/iu_dev/phydo/spec/fixtures/IU/40000002050831_20160606-151010/MDPI_40000002050831_01_access_ffprobe.xml"
     :filename: MDPI_40000002050831_01_access_ffprobe.xml
     :file_opts: {}
+    :use: extracted_text
     :md5sum: 5984ec1541bf3ed266e787ed70fe6e92
-  - :mime_type: FIXME
+  - :mime_type: video/mp4
     :filename: MDPI_40000002050831_01_access.mp4
     :file_opts: {}
+    :use: service_file
     :md5sum: 67c6503f31ac12c4b3190c8221078d7f
     :purl: https://purl.dlib.indiana.edu/iudl/hydradam2/MDPI/40000002050831/20160606-150517/MDPI_40000002050831_01_access.mp4
+  :events:
+  - :attributes:
+      :premis_event_type:
+      - val
+      :premis_agent:
+      - mailto:fixme@fixme.fixme
+      :premis_event_date_time:
+      - '2016-06-06T15:10:11-04:00'
+      :premis_event_detail:
+      - FFprobe multimedia streams analyzer from FFmpeg
+      :premis_event_outcome:
+      - PASS
+  - :attributes:
+      :premis_event_type:
+      - mes
+      :premis_agent:
+      - mailto:store-admin@iu.edu
+      :premis_event_date_time:
+      - '2016-06-06T15:10:10-04:00'
+      :premis_event_detail:
+      - 'Program used: python, hashlib.sha256()'
+      :premis_event_outcome:
+      - 67c6503f31ac12c4b3190c8221078d7f
 - :filename: MDPI_40000002050831_pod.xml
   :files:
   - :mime_type: application/xml
-    :path: "/home/aploshay/Documents/iu_dev/hydradam2-app/spec/fixtures/IU/40000002050831_20160606-151010/MDPI_40000002050831_pod.xml"
+    :path: "/home/aploshay/Documents/iu_dev/phydo/spec/fixtures/IU/40000002050831_20160606-151010/MDPI_40000002050831_pod.xml"
     :filename: MDPI_40000002050831_pod.xml
     :file_opts: {}
+    :use: original_file
     :md5sum: 36ca46477dc76964f2ab60c18ef9afbd
-- :filename: MDPI_40000002050831_01_pres_ffprobe.xml
+  :events:
+  - :attributes:
+      :premis_event_type:
+      - mes
+      :premis_agent:
+      - mailto:store-admin@iu.edu
+      :premis_event_date_time:
+      - '2016-06-06T15:10:10-04:00'
+      :premis_event_detail:
+      - 'Program used: python, hashlib.sha256()'
+      :premis_event_outcome:
+      - 36ca46477dc76964f2ab60c18ef9afbd
+- :filename: MDPI_40000002050831_01_pres.mkv
   :attributes:
+    file_format:
+    - matroska,webm
     file_format_long_name:
     - Matroska / WebM
     codec_type:
     - video
     - audio
     - audio
+    codec_name:
+    - ffv1
+    - pcm_s24le
+    - pcm_s24le
     codec_long_name:
     - 'FFmpeg video codec #1'
     - PCM signed 24-bit little-endian
@@ -134,6 +206,8 @@
     - '85096366'
     file_name:
     - "/srv/scratch/ffprobe_refresh/MDPI_40000002050831_01_pres.mkv"
+    format_file_size:
+    - '39943713293'
     format_sample_rate:
     - '48000'
     - '48000'
@@ -141,26 +215,105 @@
     - '720'
     video_height:
     - '486'
+    unit_of_origin:
+    - B-WELLS
+    identifier:
+    - '40000002050831'
+    md5_checksum:
+    - 400b22363aafdd7c149a106a1683525a
   :files:
   - :mime_type: application/xml
-    :path: "/home/aploshay/Documents/iu_dev/hydradam2-app/spec/fixtures/IU/40000002050831_20160606-151010/MDPI_40000002050831_01_pres_ffprobe.xml"
+    :path: "/home/aploshay/Documents/iu_dev/phydo/spec/fixtures/IU/40000002050831_20160606-151010/MDPI_40000002050831_01_pres_ffprobe.xml"
     :filename: MDPI_40000002050831_01_pres_ffprobe.xml
     :file_opts: {}
+    :use: extracted_text
     :md5sum: 73f5b489cf9a0192de2595369e9975b9
-  - :mime_type: FIXME
+  - :mime_type: application/octet-stream
     :filename: MDPI_40000002050831_01_pres.mkv
     :file_opts: {}
+    :use: preservation_master_file
     :md5sum: 400b22363aafdd7c149a106a1683525a
     :purl: https://purl.dlib.indiana.edu/iudl/hydradam2/MDPI/40000002050831/20160606-150517/MDPI_40000002050831_01_pres.mkv
+  :events:
+  - :attributes:
+      :premis_event_type:
+      - val
+      :premis_agent:
+      - mailto:fixme@fixme.fixme
+      :premis_event_date_time:
+      - '2016-06-06T15:10:13-04:00'
+      :premis_event_detail:
+      - FFprobe multimedia streams analyzer from FFmpeg
+      :premis_event_outcome:
+      - PASS
+  - :attributes:
+      :premis_event_type:
+      - mes
+      :premis_agent:
+      - mailto:store-admin@iu.edu
+      :premis_event_date_time:
+      - '2016-06-06T15:10:10-04:00'
+      :premis_event_detail:
+      - 'Program used: python, hashlib.sha256()'
+      :premis_event_outcome:
+      - 400b22363aafdd7c149a106a1683525a
 - :filename: README.txt
+  :events:
+  - :attributes:
+      :premis_event_type:
+      - mes
+      :premis_agent:
+      - mailto:store-admin@iu.edu
+      :premis_event_date_time:
+      - '2016-06-06T15:10:10-04:00'
+      :premis_event_detail:
+      - 'Program used: python, hashlib.sha256()'
+      :premis_event_outcome:
+      - a64147e5ac80c16d7f0b30e9720a279c
 - :filename: MDPI_40000002050831_01_cc.vtt
+  :events:
+  - :attributes:
+      :premis_event_type:
+      - mes
+      :premis_agent:
+      - mailto:store-admin@iu.edu
+      :premis_event_date_time:
+      - '2016-06-06T15:10:10-04:00'
+      :premis_event_detail:
+      - 'Program used: python, hashlib.sha256()'
+      :premis_event_outcome:
+      - e5f87f38206a0381b99149757001f95d
 - :filename: tagmanifest-md5.txt
 - :filename: MDPI_40000002050831_mods.xml
   :files:
   - :mime_type: application/xml
-    :path: "/home/aploshay/Documents/iu_dev/hydradam2-app/spec/fixtures/IU/40000002050831_20160606-151010/MDPI_40000002050831_mods.xml"
+    :path: "/home/aploshay/Documents/iu_dev/phydo/spec/fixtures/IU/40000002050831_20160606-151010/MDPI_40000002050831_mods.xml"
     :filename: MDPI_40000002050831_mods.xml
     :file_opts: {}
+    :use: original_file
     :md5sum: 02803da94cb29c302e71563a397def8e
+  :events:
+  - :attributes:
+      :premis_event_type:
+      - mes
+      :premis_agent:
+      - mailto:store-admin@iu.edu
+      :premis_event_date_time:
+      - '2016-06-06T15:10:10-04:00'
+      :premis_event_detail:
+      - 'Program used: python, hashlib.sha256()'
+      :premis_event_outcome:
+      - 02803da94cb29c302e71563a397def8e
 - :filename: MDPI_40000002050831.xml
-:sources: []
+  :events:
+  - :attributes:
+      :premis_event_type:
+      - mes
+      :premis_agent:
+      - mailto:store-admin@iu.edu
+      :premis_event_date_time:
+      - '2016-06-06T15:10:10-04:00'
+      :premis_event_detail:
+      - 'Program used: python, hashlib.sha256()'
+      :premis_event_outcome:
+      - fac6139e7922528cf442650db9e9a3a7
