Changes needed for deploying to demoable host
* Updates preservation gem.

* Adds gem therubyracer.

* Do not load  rake tasks for 'dev' and 'test' environments when in production.

* Applies patch for active_fedora-noid. This is a tmp measure for getting
  curation_concerns 1.6.3 to run in production without having to upgrade to
  1.7.x yet. See https://github.com/projecthydra/curation_concerns/pull/1061/.

* Adds config for 'production' enviornment in config/role_map.yml. Without
  some config for 'production' env, we get errors from hydra-access-controls.

* Add solr_wrapper and fcrepo_wrapper to bundle (not just :development and
  :test groups). Also adds config for both in .solr_wrapper.production and
  .fcrepo_wrapper.production.

  NOTE: We're going to use them in production to get a demo up quickly. We will
  want to come back to this when building out a more robust production env.

* Adds results of running Preservation gem install generator.

* StorageControllerBehavior Module is defined without a namespace, but was
  trying to be included with `HydraDAM::StorageControllerBehavior`.

* Removes `require 'pry'` everywhere. It's not part of the production bundle.
  Require it in development as needed, but please don't commit it.

Closes HDM-800.

--- a/config/role_map.yml
+++ b/config/role_map.yml
@@ -1,3 +1,7 @@
+# TODO: Not sure what we really want for 'production' here.
+production:
+  archivist:
+    - archivist1@example.com
 development:
   archivist:
     - archivist1@example.com
