WGBH SIP preingest: put pbcore and fits in the same FileSet (#7)
* [HDM-850] [HDM-851] Preingest WGBH pbcore, fits files with distinct uses

* [HDM-841] Change job queue handling to Inline

* [HDM-841] Monkeypatch to fix 2nd+ file not ingesting

* Removed requirement for Work resource in ingest;
removed source layer of work_attributes;
merged file_set_attributes into each file_set[:attributes];
removed sources/source_metadata stuff;
dropped unused methods;
dropped batch_ingest/ folder

* Override ingest_file_job to fix use-specific characterization

* [HDM-853] Include label attribute in WGBH preingest

* Fix use-specific characterization in ingest_yaml, without IngestFileJob override

--- a/config/context.yml
+++ b/config/context.yml
@@ -7,6 +7,7 @@
   dc: http://purl.org/dc/elements/1.1/
   dcterms: http://purl.org/dc/terms/
   iiif: http://iiif.io/api/presentation/2#
+  fedora: info:fedora/fedora-system:def/model#
   loc: http://id.loc.gov/vocabulary/identifiers/
   nfo: http://www.semanticdesktop.org/ontologies/2007/03/22/nfo#
   mods: http://www.loc.gov/mods/rdf/v1#
@@ -101,8 +102,12 @@
     "@id": ebucore:bitRate
   file_name:
     "@id": ebucore:filename
+  label:
+    "@id": fedora:downloadFilename
   filename:
     "@id": ebucore:filename
+  format_file_size:
+    "@id": ebucore:fileSize
   file_size:
     "@id": ebucore:fileSize
   identifier:
