--- a/config/role_map.yml
+++ b/config/role_map.yml
@@ -1,23 +1,4 @@
-development:
-  archivist:
-    - archivist1@example.com
-
-test:
-  archivist:
-    - archivist1@example.com
-    - archivist2@example.com
-    - leland_himself@example.com
-  admin_policy_object_editor:
-    - archivist1@example.com
-  donor:
-    - donor1@example.com
-    - leland_himself@example.com
-  researcher:
-    - archivist1@example.com
-    - researcher1@example.com
-  patron:
-    - patron1@example.com
-    - leland_himself@example.com
-
 production:
-  # Add roles for users here.
+  admin:
+    - phydo_admin@wgbh.org
+    - andrew_myers@wgbh.org
