--- a/config/context.yml
+++ b/config/context.yml
@@ -58,26 +58,26 @@
     "@id": skos:changeNote
   manual_qc_check:
     "@id": skos:changeNote
-  encoder_manufacturer:
-    "@id": premisrdf:hasHardwareOtherInformation
-  encoder_model:
-    "@id": premisrdf:hasHardwareOtherInformation
-  encoder_serial_number:
-    "@id": premisrdf:hasHardwareOtherInformation
-  ad_manufacturer:
-    "@id": premisrdf:hasHardwareName
-  ad_model:
-    "@id": premisrdf:hasHardwareName
-  ad_serial_number:
-    "@id": premisrdf:hasHardwareName
+  Encoder_manufacturer:
+    "@id": premis:hasHardwareOtherInformation
+  Encoder_model:
+    "@id": premis:hasHardwareOtherInformation
+  Encoder_serial_number:
+    "@id": premis:hasHardwareOtherInformation
+  Analog/Digital Converter_manufacturer:
+    "@id": premis:hasHardwareName
+  Analog/Digital Converter_model:
+    "@id": premis:hasHardwareName
+  Analog/Digital Converter_serial_number:
+    "@id": premis:hasHardwareName
   speed_used:
     "@id": ebucore:playbackSpeed
-  tbc_manufacturer:
-    "@id": premisrdf:hasHardwareName
-  tbc_model:
-    "@id": premisrdf:hasHardwareName
-  tbc_serial_number:
-   "@id": premisrdf:hasHardwareName
+  Time Base Corrector_manufacturer:
+    "@id": premis:hasSoftwareName
+  Time Base Corrector_model:
+    "@id": premis:hasSoftwareName
+  Time Base Corrector_serial_number:
+   "@id": premis:hasSoftwareName
   tape_thickness:
     "@id": dcterms:description
   total_parts:
