--- a/config/solr.yml
+++ b/config/solr.yml
@@ -1,7 +1,6 @@
-# This is a sample config file that points to a solr server for each environment
-development:
-  url: http://127.0.0.1:<%= ENV['SOLR_TEST_PORT'] || 8983 %>/solr/phydo-development
 test:
   url: http://127.0.0.1:<%= ENV['SOLR_TEST_PORT'] || 8985 %>/solr/phydo-test
+development:
+  url: http://127.0.0.1:8983/solr/phydo-development
 production:
   url: http://127.0.0.1:8983/solr/phydo-production
