--- a/.solr_wrapper.test.yml
+++ b/.solr_wrapper.test.yml
@@ -1,6 +1,7 @@
 # Place any default configuration for solr_wrapper here
 port: 8985
 version: 6.6.1
+instance_dir: tmp/solr-test
 collection:
   dir: solr/config/
   name: phydo-test
