--- a/.solr_wrapper.test.yml
+++ b/.solr_wrapper.test.yml
@@ -1,5 +1,6 @@
 # Place any default configuration for solr_wrapper here
 port: 8985
+instance_dir: tmp/solr-test
 collection:
   dir: solr/config/
   name: phydo-test
