--- a/spec/features/wgbh_ingest/example_1/ingest_example_1_config.yml
+++ b/spec/features/wgbh_ingest/example_1/ingest_example_1_config.yml
@@ -2,11 +2,77 @@
 ingest:
   - FileSet:
       properties:
+        - rdf_predicate: 'http://www.ebu.ch/metadata/ontologies/ebucore/ebucore#dateCreated'
+          from:
+            XMLFile:
+              filename: example_1_pbcore.xml
+              xpath: 'REPLACE_WITH_VALID_XPATH'
+
         - rdf_predicate: "http://www.ebu.ch/metadata/ontologies/ebucore/ebucore#hasFileFormat"
           from:
             XMLFile:
               filename: example_1_pbcore.xml
               xpath: //pbcoreInstantiationDocument/instantiationStandard
+
+        - rdf_predicate: "http://www.loc.gov/premis/rdf/v1#hasFormatName"
+          from:
+            XMLFile:
+              filename: example_1_fits.xml
+              xpath: //fits/identification/identity/@format
+
+        # - rdf_predicate: 'http://www.semanticdesktop.org/ontologies/2007/03/22/nfo#codec'
+        #   from:
+        #     XMLFile:
+        #       filename: example_1_pbcore.xml
+        #       xpath: '//instantiationMediaType[@version="mimetype"]'
+
+        - rdf_predicate: "http://www.ebu.ch/metadata/ontologies/ebucore/ebucore#hasCodec"
+          from:
+            XMLFile:
+              filename: example_1_pbcore.xml
+              xpath: '//instantiationMediaType[@version="mimetype"]'
+
+        - rdf_predicate: "http://www.ebu.ch/metadata/ontologies/ebucore/ebucore#duration"
+          from:
+            XMLFile:
+              filename: example_1_pbcore.xml
+              xpath: 'REPLACE_WITH_VALID_XPATH'
+
+        - rdf_predicate: "http://www.ebu.ch/metadata/ontologies/ebucore/ebucore#bitRate"
+          from:
+            XMLFile:
+              filename: example_1_pbcore.xml
+              xpath: 'REPLACE_WITH_VALID_XPATH'
+
+        - rdf_predicate: "http://www.ebu.ch/metadata/ontologies/ebucore/ebucore#filename"
+          from:
+            XMLFile:
+              filename: example_1_pbcore.xml
+              xpath: 'REPLACE_WITH_VALID_XPATH'
+
+        - rdf_predicate: "http://www.ebu.ch/metadata/ontologies/ebucore/ebucore#fileSize"
+          from:
+            XMLFile:
+              filename: example_1_pbcore.xml
+              xpath: 'REPLACE_WITH_VALID_XPATH'
+
+        - rdf_predicate: "http://www.ebu.ch/metadata/ontologies/ebucore/ebucore#identifier"
+          from:
+            XMLFile:
+              filename: example_1_pbcore.xml
+              xpath: 'REPLACE_WITH_VALID_XPATH'
+
+        - rdf_predicate: "http://www.ebu.ch/metadata/ontologies/ebucore/ebucore#partNumber"
+          from:
+            XMLFile:
+              filename: example_1_pbcore.xml
+              xpath: 'REPLACE_WITH_VALID_XPATH'
+
+        - rdf_predicate: "http://www.ebu.ch/metadata/ontologies/ebucore/ebucore#sampleRate"
+          from:
+            XMLFile:
+              filename: example_1_pbcore.xml
+              xpath: 'REPLACE_WITH_VALID_XPATH'
 
         - rdf_predicate: "http://www.ebu.ch/metadata/ontologies/ebucore/ebucore#width"
           from:
@@ -19,3 +85,9 @@ ingest:
             XMLFile:
               filename: example_1_fits.xml
               xpath: //fits/metadata/video/track[@type="video"]/height
+
+        - rdf_predicate: "http://www.ebu.ch/metadata/ontologies/ebucore/ebucore#locator"
+          from:
+            XMLFile:
+              filename: example_1_fits.xml
+              xpath: //fits/metadata/video/location
