--- a/spec/features/wgbh_ingest/example_3/ingest_example_3_config.yml
+++ b/spec/features/wgbh_ingest/example_3/ingest_example_3_config.yml
@@ -85,3 +85,11 @@ ingest:
             XMLFile:
               filename: '/_pbcore.xml$/'
               xpath: '//pbcoreInstantiationDocument/instantiationLocation[@annotation="Barcode identifier"]'
+      PreservationEvents:
+        - properties:
+          - rdf_predicate: "http://www.loc.gov/premis/rdf/v1#hasEventType"
+            from:
+              PremisEventType: 'ing'
+          - rdf_predicate: "http://www.loc.gov/premis/rdf/v1#hasAgent"
+            from:
+              RdfUri: 'mailto:admin@example.org'
