--- a/.solr_wrapper.production.yml
+++ b/.solr_wrapper.production.yml
@@ -1,6 +1,6 @@
 # Place any default configuration for solr_wrapper here
 # port: 8983
-verion: 6.6.1
+version: 6.6.1
 collection:
   dir: solr/config/
   name: phydo-production
