--- a/config/fedora.yml
+++ b/config/fedora.yml
@@ -9,7 +9,7 @@ test:
   url: http://127.0.0.1:<%= ENV['FCREPO_TEST_PORT'] || 8986 %>/rest
   base_path: /test
 production:
-  user: fedoraAdmin
-  password: fedoraAdmin
-  url: http://127.0.0.1:8983/fedora/rest
-  base_path: /prod
+  user: <%= ENV['FCREPO_USER'] || "fedoraAdmin" %>
+  password: <%= ENV['FCREPO_PASSWORD'] || "fedoraAdmin" %>
+  url: <%= ENV['FCREPO_URL'] || "http://127.0.0.1:8984" %>
+  base_path: <%= ENV['FCREPO_BASE'] || "/prod" %>
