--- a/config/solr.yml
+++ b/config/solr.yml
@@ -4,4 +4,4 @@ development:
 test:
   url: http://127.0.0.1:<%= ENV['SOLR_TEST_PORT'] || 8985 %>/solr/phydo-test
 production:
-  url: http://127.0.0.1:8983/solr/phydo-production
+  url: <%= ENV['SOLR_URL'] || "http://127.0.0.1:8983/solr/phydo-production" %>
