--- a/config/database.yml
+++ b/config/database.yml
@@ -22,4 +22,9 @@ test:
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  adapter: mysql2
+  encoding: utf8
+  host: <%= ENV['MYSQL_HOST'] %>
+  database: <%= ENV['MYSQL_DB'] %>
+  username: <%= ENV['MYSQL_USER'] %>
+  password: <%= ENV['MYSQL_PASSWORD'] %>
