--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - 134.68.1.9
     ports:
       - "3000:3000"
-    env_file: ./docker.env
+#    env_file: docker.env
     environment:
       - REDIS_HOST=localhost
       - REDIS_PORT=6379
