--- a/config/redis.yml
+++ b/config/redis.yml
@@ -5,5 +5,5 @@ test:
   host: localhost
   port: 6379
 production:
-  host: <%= ENV['REDIS_HOST'] || 'localhost' %>
-  port: <%= ENV['REDIS_PORT'] || 6379 %>
+  host: <%= Phydo.config[:redis][:host] %>
+  port: <%= Phydo.config[:redis][:port] %>
