--- a/docker.secrets.sample
+++ b/docker.secrets.sample
@@ -1,28 +1,35 @@
-#!/usr/bin/env bash
-
-FCREPO_USER=fcrepoUser
-FCREPO_PASSWORD=fcrepoPass
-FCREPO_URL=fcrepo:8984/rest
-FCREPO_PATH=/app_dev
-
-SOLR_PATH=solr:8983
-
-MYSQL_HOST=mysql
-MYSQL_DB=app_dev
-MYSQL_USER=app
-MYSQL_PASSWORD=mysqlPass
-
-EXT_STORAGE_URI_HOST=
-EXT_STORAGE_ENABLED=false
-EXT_STORAGE_HOST=
-EXT_STORAGE_SERVICE=
-
-PHYDO_LDAP_HOST=
-PHYDO_LDAP_TREE=
-PHYDO_LDAP_ACCOUNT_OU=
-PHYDO_LDAP_GROUP_OU=
-PHYDO_LDAP_USER=
-PHYDO_LDAP_PASS=
-
-# Yaml chunk for role_map.yml
-PHYDO_LDAP_GROUP_ROLES={admin: []}
+development:
+  fedora:
+    user: fedoraAdmin
+    password: fedoraPass
+    url: http://localhost:8984/rest
+    path: /phydo/dev
+  solr:
+    path: http://localhost:8983/solr/phydo-development
+  db:
+    adapter: sqlite3
+    database: db/development.sqlite3
+  redis:
+    host: localhost
+    port: 6379
+  secret_key_base:
+  derivatives:
+    path: tmp/derivatives
+  external_storage:
+    enabled: false
+    uri_host: http://purl.localhost/preserve/archive
+    host: http://localhost:8080/
+    service: archive
+  ldap:
+    enabled: false
+    host: ads.example.com
+    tree: dc=ads,dc=example,dc=com
+    account_ou: ou=Accounts
+    group_ou: ou=BL
+    user: adsdev,ou=Accounts,dc=ads,dc=example,dc=com
+    pass: changeme
+    group_roles:
+      admin:
+        - PHYDO-USERS
+test:
+production:
