--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -19,4 +19,4 @@ test:
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
 production:
-  secret_key_base: <%= Phydo.config[:secret_key_base] %>
+  secret_key_base: <%= Phydo.config[:rails][:secret_key_base] %>
