--- a/docker.secrets.sample
+++ b/docker.secrets.sample
@@ -12,7 +12,9 @@ development:
   redis:
     host: localhost
     port: 6379
-  secret_key_base:
+  rails:
+    serve_static_files: true
+    secret_key_base: 12345
   derivatives:
     path: tmp/derivatives
   external_storage:
@@ -26,6 +28,7 @@ development:
     tree: dc=ads,dc=example,dc=com
     account_ou: ou=Accounts
     group_ou: ou=BL
+    method: simple
     user: adsdev,ou=Accounts,dc=ads,dc=example,dc=com
     pass: changeme
     group_roles:
